# task_validate_sudoku

./: CMakeLists.txt  README.md  main.cpp
headers/SudokuValidator/: SudokuValidator.h
sources/: SudokuValidator.cpp
test/: Test.cpp
